# ignition-playground

./: .dockerignore  .env.example  .gitignore  =3.10.4  ARCHITECTURE.md  CANCEL_BUTTON_BUG.md  CHANGELOG.md  CI_CD_REMEDIATION_PLAN.md  CI_CD_SETUP.md  CODE_QUALITY_REPORT_v3.0.0.md  DOCUMENTATION_CLEANUP_SUMMARY.md  Dockerfile  FRONTEND_UPDATES.md  HANDOFF.md  IMPLEMENTATION_COMPLETE.md  ISSUES_TO_FIX.md  MODULE_UPGRADE_FIX_REPORT.md  MODULE_UPGRADE_QUICK_REFERENCE.md  Makefile  NEW_DEVELOPER_START_HERE.md  PACKAGES.md  PERSPECTIVE_TESTING_FRAMEWORK_SUMMARY.md  PHASE_0_COMPLETE.md  PHASE_3_6_COMPLETE.md  PLAN.md  PLAYBOOK_BACKUP_GUIDE.md  PLAYBOOK_CODE_VIEWER_TODO.md  PROGRESS.md  PROGRESS_STATUS.md  PROJECT_COMPLETE.md  PROJECT_GOALS.md  README.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  SERVER_MANAGEMENT.md  SESSION_STATE.md  STEP_REFERENCE_IMPLEMENTATION.md  SYSTEMD_SERVICE.md  TODO_REMAINING.md  V4_PORTABILITY_SUMMARY.md  (+29 more)
.claude/: ANTHROPIC_SDK_MIGRATION_PLAN.md  CLAUDE.md  PHASE2_SESSION_START.md  SECURITY_CHECKLIST.md  UPDATE_WORKFLOW.md  VERSION_TRACKING.md  WAYS_OF_WORKING.md
.refactor/: ISSUES.md  MASTER_PLAN.md  PHASE2_COMPLETE_SUMMARY.md  PHASE2_EXTRACTION_SPEC.md  PHASE2_ROUTE_ANALYSIS.md  PHASE3_COMPLETE_SUMMARY.md  PROGRESS.md
archive/v4-development/: CANCEL_BUTTON_BUG.md  V4_CODE_REVIEW_REPORT.md  V4_SETUP.md  V4_SETUP_STATUS.md
docs/: CANCELLATION_PATTERN.md  CLAUDE_CODE_PHASE2_PLAN.md  CREDENTIAL_STORAGE_FIX.md  DEVELOPER_WORKFLOW.md  FAT_PROTOTYPE_README.md  FAT_QUICK_START.md  FEATURE_REQUEST_NESTED_PLAYBOOKS.md  IMPLEMENTATION_CHECKLIST.md  MIGRATION_V5.md  PLATFORM_BUILDS.md  PLAYBOOK_BEST_PRACTICES.md  PLAYBOOK_LIBRARY.md  PLAYBOOK_SCHEDULING_DESIGN.md  QUICK_START.md  ROADMAP.md  RUNNING_PLAYBOOKS.md  TESTING_GUIDE.md  getting_started.md  playbook_syntax.md  playbooks-index-example.json  playbooks-index-schema.json
docs/archive/: CI_CD_SETUP.md
docs/archive/features/: CLAUDE_CODE_INTEGRATION.md  IMPLEMENTATION_GUIDE.md
docs/archive/implementation/: ANTHROPIC_SDK_MIGRATION_PLAN.md  MANDATORY_CHECKLIST.md  NPM_DEPENDENCY_FIX.md  SERVER_RESTART.md  UX_VERIFICATION_PROCEDURE.md
docs/deployment/: linux_deployment.md  windows_deployment.md  wsl2_deployment.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend_legacy/: index.html.backup  index.html.old
ignition_toolkit/: __init__.py  cli.py  cli_server.py  config.py
ignition_toolkit/ai/: __init__.py  assistant.py  prompts.py
ignition_toolkit/api/: app.py
ignition_toolkit/browser/: manager.py  recorder.py
ignition_toolkit/core/: config.py  exceptions.py  interfaces.py  paths.py  validation.py
ignition_toolkit/credentials/: __init__.py  encryption.py  models.py  vault.py
ignition_toolkit/designer/: manager.py
ignition_toolkit/gateway/: __init__.py  client.py  exceptions.py  models.py
ignition_toolkit/playbook/: __init__.py  cancellation.py  engine.py  execution_manager.py  exporter.py  loader.py  metadata.py  models.py  parameters.py  registry.py  state_manager.py  step_executor.py  step_executor_old.py
ignition_toolkit/startup/: __init__.py  exceptions.py  health.py  lifecycle.py  validators.py
ignition_toolkit/storage/: __init__.py  database.py  models.py
platform-config/common/: README.md  requirements.txt
platform-config/linux/: README.md  launcher.sh.template  requirements.txt  system-deps.txt
platform-config/windows/: README.md  launcher.bat.template  requirements.txt  system-deps.txt
playbooks/ai/: ai_assisted_test.backup.20251024_231456.yaml  ai_assisted_test.yaml
playbooks/browser/: ignition_web_test.yaml  screenshot_audit.yaml  web_login_test.yaml
playbooks/designer/: README.md  launch_designer.yaml  launch_designer_shortcut.yaml  launch_designer_shortcut_v2.yaml  launch_local_docker_designer.yaml
playbooks/examples/: gateway_login.yaml  simple_health_check.yaml
playbooks/gateway/: backup_and_restart.yaml  backup_gateway.yaml  gateway_login.yaml  gateway_restart.yaml  module_install.yaml  module_uninstall.yaml  module_upgrade.yaml  reset_trial.yaml  simple_health_check.backup.20251025_153245.yaml  simple_health_check.yaml
playbooks/perspective/: fat_basic_test.yaml  fat_comprehensive_test.yaml
playbooks/tests/: test_cancellation.yaml
scripts/: backup-user-playbooks.sh  check-server.ps1  check_system_deps.py  create_portable.py  migrate-to-v5.py  publish-playbooks.py  start-server.ps1  stop-server.ps1  test_portability.py
tests/: __init__.py  test_ai_assistant.py  test_credential_flow.py  test_credentials.py  test_designer.py  test_installation.py  test_integration.py  test_parameter_resolver.py  test_playbook_loader.py  test_security.py  test_v4_functionality.py
tests/api/: __init__.py  test_routers_ai.py  test_routers_credentials.py  test_routers_executions.py  test_routers_health.py  test_routers_playbooks.py  test_routers_websockets.py
tests/test_startup/: __init__.py  test_health.py  test_integration.py  test_lifecycle.py  test_validators.py
windows-shortcuts/: Open-Ignition-Toolkit-Browser.bat  README.md  Start-Ignition-Toolkit-Systemd.bat  Start-Ignition-Toolkit.bat  Start-Ignition-Toolkit.ps1  Stop-Ignition-Toolkit-Systemd.bat
(+61 files in other folders)
