[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ignition-toolkit"
version = "1.0.20"  # Updated: 2025-10-24 - Playbook metadata UI integration with menu-driven actions
description = "Lightweight automation toolkit for Ignition SCADA Gateway operations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nigel G", email = "your-email@example.com"}
]
keywords = ["ignition", "scada", "automation", "testing", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0",
    "cryptography>=41.0.0",
    "playwright>=1.40.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "click>=8.1.0",
    "rich>=13.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]
ai = [
    "anthropic>=0.7.0",
]

[project.scripts]
ignition-toolkit = "ignition_toolkit.cli:main"

[project.urls]
Homepage = "https://github.com/nigelgwork/ignition-playground"
Documentation = "https://github.com/nigelgwork/ignition-playground/docs"
Repository = "https://github.com/nigelgwork/ignition-playground"
Issues = "https://github.com/nigelgwork/ignition-playground/issues"

[tool.setuptools]
packages = ["ignition_toolkit"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "integration: Integration tests requiring external services",
    "slow: Slow running tests",
]
