[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ignition-toolkit"
version = "1.0.34"  # Updated: 2025-10-25 - Bug fixes: disabled badge, verified status, debug mode persistence, gateway login
description = "Lightweight automation toolkit for Ignition SCADA Gateway operations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nigel G", email = "your-email@example.com"}
]
keywords = ["ignition", "scada", "automation", "testing", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "fastapi>=0.120.0",
    "uvicorn[standard]>=0.38.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.44",
    "aiosqlite>=0.21.0",
    "pyyaml>=6.0.2",
    "cryptography>=46.0.3",
    "playwright>=1.55.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.1",
    "websockets>=15.0",
    "click>=8.1.9",
    "rich>=13.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "black>=25.2.0",
    "ruff>=0.11.4",
    "mypy>=1.15.0",
]
ai = [
    "anthropic>=0.71.0",
]

[project.scripts]
ignition-toolkit = "ignition_toolkit.cli:main"

[project.urls]
Homepage = "https://github.com/nigelgwork/ignition-playground"
Documentation = "https://github.com/nigelgwork/ignition-playground/docs"
Repository = "https://github.com/nigelgwork/ignition-playground"
Issues = "https://github.com/nigelgwork/ignition-playground/issues"

[tool.setuptools]
packages = ["ignition_toolkit"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "integration: Integration tests requiring external services",
    "slow: Slow running tests",
]
